bin/testsuite/tests/compiler/src/errors/compiler120.swg
#global testerror "Err0577"
namespace Swag
{
}
